--- a/.github/workflows/master_popdog-discord-dm.yml
+++ b/.github/workflows/master_popdog-discord-dm.yml
@@ -28,11 +28,10 @@ jobs:
           name: "config.json"
           json: ${{ secrets.CONFIG_JSON }}
 
-      - name: npm install, build, and test
+      - name: npm install and build
         run: |
           npm install
           npm run build --if-present
-          npm run test --if-present
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
