--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@notionhq/client": "^2.2.15",
     "discord.js": "^14.15.3",
     "dotenv": "^16.4.5"
   },
