--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -15,3 +15,4 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "popdog-discord-dm" #Must be unique in Heroku
           heroku_email: "wmyers09@gmail.com"
+          usedocker: true
