--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+# Create config.json file
+      - name: create-json
+        id: create-json
+        uses: jsdaniell/create-json@1.1.2
+        with:
+            name: "config.json"
+            json: ${{ secrets.CONFIG_JSON }}
 
 ### ⬇ IMPORTANT PART ⬇ ###
 
