--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,27 +1,41 @@
-# Your workflow name.
-name: Deploy to heroku.
+name: Build and deploy Node.js app to Heroku - popdog-discord-dm
 
-# Run workflow on every push to master branch.
 on:
   push:
-    branches: [master]
+    branches:
+      - master
+  workflow_dispatch:
 
-# Your workflows jobs.
 jobs:
   build:
-    runs-on: ubuntu-latest
-    steps:
-      # Check-out your repository.
-      - name: Checkout
-        uses: actions/checkout@v2
+    runs-on: windows-latest
 
-# Create config.json file
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Node.js version
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20.x'
+
       - name: create-json
         id: create-json
         uses: jsdaniell/create-json@1.1.2
         with:
-            name: "config.json"
-            json: ${{ secrets.CONFIG_JSON }}
+          name: "config.json"
+          json: ${{ secrets.CONFIG_JSON }}
+
+      - name: npm install, build, and test
+        run: |
+          npm install
+          npm run build --if-present
+          npm run test --if-present
+
+      - name: Upload artifact for deployment job
+        uses: actions/upload-artifact@v3
+        with:
+          name: node-app
+          path: .
 
 ### ⬇ IMPORTANT PART ⬇ ###
 
@@ -60,7 +74,5 @@ jobs:
           # By default, this argument is set to "web".
           # For more information look at https://devcenter.heroku.com/articles/process-model
           process_type: web
-          
-   
-          
+
 ### ⬆ IMPORTANT PART ⬆ ###
