Changed back to web type. Added health check.

--- a/heroku.yml
+++ b/heroku.yml
@@ -1,5 +1,5 @@
 build:
   docker:
-    worker: Dockerfile
+    web: Dockerfile
 run:
-  worker: node /usr/src/app/index.js
+  web: node /usr/src/app/index.js
