--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build and deploy Node.js app to Heroku - popdog-discord-dm
+name: Build and deploy Node.js app to Heroku
 
 on:
   push:
@@ -18,14 +18,14 @@ jobs:
         with:
           node-version: '20.x'
 
-      - name: create-json
+      - name: Create the config.json file
         id: create-json
         uses: jsdaniell/create-json@1.1.2
         with:
           name: "config.json"
           json: ${{ secrets.CONFIG_JSON }}
 
-      - name: npm install and build
+      - name: Install dependencies and BUILD
         run: |
           npm install
           npm run build --if-present
@@ -36,8 +36,8 @@ jobs:
           name: node-app
           path: .
 
-      - name: Build, Push and Release a Docker container to Heroku. # Your custom step name
-        uses: akhileshns/heroku-deploy@v3.13.15 # This is the action
+      - name: Build, Push and Release a Docker container to Heroku.
+        uses: akhileshns/heroku-deploy@v3.13.15
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: ${{ secrets.HEROKU_APP_NAME }}
