--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@notionhq/client": "^2.2.15",
     "discord.js": "^14.15.3",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "notion-kv-store": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "^9.6.0"
-  }
+  },
+  "type": "module"
 }
